--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 		"start": "nodemon index.js"
 	},
 	"dependencies": {
+		"cors": "^2.8.5",
 		"ejs": "^3.1.5",
 		"express": "^4.17.1",
 		"mysql": "^2.18.1",
