--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
 		"start": "nodemon index.js"
 	},
 	"dependencies": {
+		"body-parser": "^1.19.0",
 		"cors": "^2.8.5",
 		"ejs": "^3.1.5",
 		"express": "^4.17.1",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.1.0",
-		"nodemon": "^2.0.7"
+		"nodemon": "^2.0.7",
+		"uuid": "^8.3.2"
 	},
 	"author": "Patrick",
 	"license": "ISC"
