--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
 		"cors": "^2.8.5",
 		"ejs": "^3.1.5",
 		"express": "^4.17.1",
+		"express-formidable": "^1.2.0",
+		"formidable": "^1.2.2",
 		"mysql": "^2.18.1",
 		"mysql2": "^2.1.0",
 		"nodemon": "^2.0.7",
